load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_shared_library.bzl", "cc_shared_library")

exports_files(["testbench_helper.sh"])

cc_library(
    name = "ioengine",
    srcs = [
        "go-storage-fio-engine.c",
        "//storagewrapper",
    ],
    defines = ["_GNU_SOURCE"],
    deps = [
        "//storagewrapper",
        "@fio_repo//:hdr_lib",
    ],
)

cc_shared_library(
    name = "ioengine_shared",
    shared_lib_name = "libgo-storage-fio-engine.so",
    deps = [":ioengine"],
)

sh_binary(
    name = "fio",
    srcs = ["run_fio.sh"],
    args = ["$(location @fio_repo//:fio)"],
    data = [
        ":ioengine_shared",
        "@fio_repo//:fio",
    ],
)

sh_test(
    name = "help_test",
    srcs = ["run_fio.sh"],
    args = [
        "$(location @fio_repo//:fio)",
        "--ioengine=external:$(location :ioengine_shared)",
        "--enghelp=$(location :ioengine_shared)",
    ],
    data = [
        ":ioengine_shared",
        "@fio_repo//:fio",
    ],
)

sh_test(
    name = "fio_integration_test",
    srcs = ["run_fio_integration_tests.sh"],
    args = [
        "$(location @fio_repo//:fio)",
        "$(location :ioengine_shared)",
        "$(location :testbench_helper.sh)",
        "$(location :fio_validator.py)",
        "$(location @storage_testbench//:setup.py)",
        "$(location @storage_testbench//:testbench_run.py)",
    ],
    data = [
        "@fio_repo//:fio",
        ":ioengine_shared",
        ":testbench_helper.sh",
        ":fio_validator.py",
        "@storage_testbench//:all_files",
        "@storage_testbench//:setup.py",
        "@storage_testbench//:testbench_run.py",
    ],
    tags = ["local"],
)
