load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

gazelle(name = "gazelle")

go_binary(
    name = "storagewrapper",
    embed = [":storagewrapper_lib"],
    linkmode = "c-archive",
    visibility = ["//visibility:public"],
)

go_library(
    name = "storagewrapper_lib",
    srcs = ["storagewrapper.go"],
    cgo = True,
    importpath = "storagewrapper",
    visibility = ["//visibility:private"],
    deps = [
        "@com_google_cloud_go_storage//:storage",
        "@com_google_cloud_go_storage//experimental",
        "@org_golang_google_api//option",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_test(
    name = "storagewrapper_test",
    srcs = ["storagewrapper_test.go"],
    embed = [":storagewrapper_lib"],
    deps = ["@com_google_cloud_go_storage//:storage"],
)

sh_test(
    name = "integration_test",
    srcs = ["run_integration_test.sh"],
    args = [
        "$(location :storagewrapper_test)",
        "$(location //:testbench_helper.sh)",
        "$(location @storage_testbench//:setup.py)",
        "$(location @storage_testbench//:testbench_run.py)",
    ],
    data = [
        ":storagewrapper_test",
        "//:testbench_helper.sh",
        "@storage_testbench//:all_files",
        "@storage_testbench//:setup.py",
        "@storage_testbench//:testbench_run.py",
    ],
    tags = ["local"],
)
